--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">Visualise Mandai</string>
 
+    <!-- Firebase Authentication to use database TODO: confirm this-->
+    <string name="authentication_email">master@vm.com</string>
+    <string name="authentication_password">12345678</string>
+
     <!--Firebase Connection Activity-->
     <string name="firebaseconnection_edittext_hint_email">Email Address</string>
     <string name="firebaseconnection_edittext_hint_password">Password</string>
@@ -10,4 +14,10 @@
     <string name="signin_edittext_hint_email">Email Address</string>
     <string name="signin_edittext_hint_password">Password</string>
     <string name="signin_button_signin">Sign In</string>
+
+    <!-- Info Fragment -->
+    <string name="info_fragment">This is the info fragment</string>
+
+    <!-- Notification Fragment -->
+    <string name="notification_fragment">This is the notification fragment</string>
 </resources>
