--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,10 @@
     <!-- Staff Available Card -->
     <string name="staff_available_card_title">Staff Available</string>
 
+    <!-- Check Showtime Card -->
+    <string name="check_showtime_card_title">Check Website Showtime</string>
+    <string name="check_showtime_card_button">Check Now</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
