--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">visualisemandai</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
+    <string name="title_activity_show">ShowActivity</string>
+    <string name="title_activity_show__status">Show_StatusActivity</string>
 </resources>
